tests/fixtures/errors/div_zero.ore
fn main
  x := 10 / 0
  print x
